# OmicsClaw

./: .env.example  .env.ollama.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT-MAP.md  CONTRIBUTING.md  LICENSE  Makefile  PHASE2_COMPLETE.md  PHASE4_COMPLETE.md  README.md  README_zh-CN.md  SINGLECELL_REFACTOR_PLAN.md  SOUL.md  SPEC.md  environment.yml  install_r_dependencies.R  llms.txt  mint.json  omicsclaw.py  pyproject.toml  requirements_sc_minimal.txt  requirements_sc_strict.txt  singlecell_refactor_plan.md
.github/workflows/: claude-code-review.yml  claude.yml  deploy-website.yml  pr-ci.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
bot/: CHANNELS_SETUP.md  FEISHU_SETUP.md  README.md  TELEGRAM_SETUP.md  __init__.py  agent_loop.py  core.py  feishu_bot.py  onboard.py  preflight.py  run.py  run_longConnect.py  session.py  skill_orchestration.py  telegram_bot.py  tool_executors.py
bot/channels/: manager.py
bot/commands/: builtins.py
bot/memory/: models.py  store.py
bot/tests/: test_tools.py
docs/: 2026-05-09-memory-refactor-plan.md  ARCHITECTURE.md  CONTEXT.md  INSTALLATION.md  MEMORY_SYSTEM.md  METHODS.md  UNIFIED_PLATFORM_AUDIT_TODO.md  WORKSPACE_OUTPUT_OPTIMIZATION_PLAN.md  architecture.md  claude-code-migration-plan.md  product-overview.md  remote-connection-guide.md  skill-architecture.md  skill-v2-migration-runbook.md
docs/_legacy/: INSTALLATION.md  MEMORY_SYSTEM.md  architecture.md  remote-connection-guide.md
docs/adr/: 0004-boundary-restructure-fold-bot.md  0005-surfaces-umbrella-for-ingress.md  0006-agent-dispatch-event-stream.md  0007-loop-state-and-pathology-detection.md  0008-decompose-run-query-engine-into-helpers.md  0009-wire-cancel-event-through-dispatch.md  0010-consensus-runtime-layer.md  0011-consensus-evaluation-protocol.md  0012-consensus-interpret-evaluation-protocol.md  0013-autonomous-analysis-path.md  0014-outer-owned-autonomous-understanding.md  0015-exact-skill-assisted-parameterization.md  0016-consensus-as-workflow-runtime.md  0017-bench-research-continuity-workspace.md  0017-prompt-prefix-caching.md  0018-investigation-thread-equals-project.md  0019-kg-first-class-dependency-for-bench.md  0020-stage-is-backend-aware-permissive.md  0021-bench-ideate-v1_5-design.md  0022-bench-write-manuscript-object-model.md  0023-bench-threezone-frontend.md  0024-bench-heartbeat-episodic-memory.md  0024-prompt-prefix-caching.md  0025-kg-desktop-exposure.md  0026-local-llm-is-a-provider-not-a-skill.md  0027-phantom-completion-pathology.md  0028-spatial-intrinsic-panel.md  0029-sc-integration-intrinsic-panel.md  0030-first-class-skill-type-system.md  0031-continuous-consensus-template.md  0032-autonomous-code-mini-agent.md  0033-skill-template-is-human-copy-only.md  0034-bench-heartbeat-episodic-memory.md  0035-project-scoped-output-directories.md  0036-canonical-write-surface-and-idea-to-analysis-path.md  0037-unified-declarative-skill-representation.md  0038-consensus-skill-type-workflow-reserved.md  0039-token-native-context-budget.md  0040-restart-resilient-transcript-persistence.md  0041-derive-allowed-extra-flags-from-argparse.md  (+33 more)
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/architecture/: 2026-05-18-current-architecture.md  autonomous-code-mini-agent.md  orchestrator.mdx  overview.mdx  skill-system.mdx
docs/bench/: CONTEXT.md
docs/design/: consensus.md  conversational-control-plane.md
docs/domains/: singlecell.mdx  spatial.mdx
docs/ecosystem/: chat-bot.mdx  omicsclaw-app.mdx
docs/engineering/: 2026-05-07-framework-optimization-spec.md  autonomous-analysis-implementation-plan.md  domain-input-contracts.md  local-llm-gemma.mdx  remote-execution.mdx  session-state-inventory.md
docs/images/: omicsclaw-architecture-gpt-image-prompt.txt
examples/: demo_bulkrna_counts.csv
frontend/: index.html  package-lock.json  package.json  vite.config.js
knowledge_base/: INDEX.md
omicsclaw/: __init__.py  __main__.py  diagnostics.py  run_channels.py  setup_wizard.py  version.py
scripts/: audit_skill_requires.py  canonicalize_skill_yaml.py  check_description_drift.py  check_routing_budget.py  evaluate_routing_oracle.py  extract_skip_when_cases.py  generate_catalog.py  generate_domain_index.py  generate_orchestrator_counts.py  generate_parameters_md.py  generate_routing_table.py  generate_skill_dag.py  generate_skill_md.py  measure_prefix_cache.py  measure_routing_tokens.py  measure_system_prompt.py  measure_tool_list.py  migrate_skill.py  migrate_to_skill_yaml.py  run_all_spatial_tests.py  skill_lint.py  sync_skill_version.py  validate_skill_yaml.py  validate_skills.py
skills/: catalog.json  skill_dag.json  skill_dag_reviews.yaml
templates/: 01.SKILL-OPTIMIZATION.md  SKILL-TEMPLATE.md
tests/: conftest.py  test_active_workspace_authority.py  test_adaptive_env_desktop.py  test_adaptive_env_phase3.py  test_agent_dispatcher.py  test_agents.py  test_analysis_dispatcher_contract.py  test_analysis_router.py  test_app_attachments.py  test_app_server.py  test_app_server_oauth.py  test_assisted_parameterization_context.py  test_async_subprocess_driver.py  test_audit_requires_v2.py  test_auto_capture_provenance.py  test_auto_routing_disambiguation.py  test_autoagent_accepted_commit.py  test_autoagent_admission_authority.py  test_autoagent_admission_persistence.py  test_autoagent_api.py  test_autoagent_cli.py  test_autoagent_durable_api.py  test_autoagent_edit_surface.py  test_autoagent_failure_memory.py  test_autoagent_governed_api.py  test_autoagent_hard_gates.py  test_autoagent_harness_directive.py  test_autoagent_harness_integration.py  test_autoagent_harness_loop.py  test_autoagent_harness_workspace.py  test_autoagent_llm_client_deepseek.py  test_autoagent_output_ownership.py  test_autoagent_patch_engine.py  test_autoagent_process_owner.py  test_autoagent_runtime.py  test_autoagent_stage1.py  test_autoagent_start_body_guard.py  test_autoagent_trace.py  test_autonomous_analysis.py  test_autonomous_code_runner.py  (+263 more)
website/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+1902 files in other folders)
